<resources>
    <string name="app_name">Profile</string>
    <string name="facebook">Facebook</string>
    <string name="shared_preference_is_first_start">is_first_start</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="motto">Your resume on your hand…</string>
    <string name="start">Start</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="registration_agree">By checking this box, I agree to the terms and conditions of using this website.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="already_have_account">Already a user? Sign In</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="request_password">Request Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="backup">BackUp</string>
    <string name="profile_analytics">Profile Analytics</string>
    <string name="analytics">Analytics</string>
    <string name="messages">Messages</string>
    <string name="synchronize">Synchronize</string>
    <string name="page_views">Page Views</string>
    <string name="likes">Likes</string>
    <string name="invites">Invites</string>
    <string name="profile_comments">Profile Comments</string>
    <string name="comments">Comments</string>
    <string name="view_all">View All</string>
    <string name="view">View</string>
    <string name="exit">Exit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sample_full_date_time">Sunday 9, Dec 2018 2:33PM</string>
    <string name="sample_date_time">9/12/2018 2:33PM</string>
    <string name="sample_time">2:33PM</string>
    <string name="explore">Explore</string>
    <string name="reviews">Reviews</string>
</resources>
