<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/openDashboard"
            android:checked="true"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/openProfile"
            android:icon="@drawable/ic_edit_white_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/openAnalytics"
            android:icon="@drawable/ic_show_chart_white_24dp"
            android:title="@string/analytics" />
        <item
            android:id="@+id/openInvites"
            android:icon="@drawable/ic_invite_white_24dp"
            android:title="@string/invites" />
        <item
            android:id="@+id/openLikes"
            android:icon="@drawable/ic_likes_white_24dp"
            android:title="@string/likes" />
    </group>
</menu>