<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="28dp"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView2"
                style="@style/AppTheme.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="36sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView3"
                style="@style/AppTheme.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/motto"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:padding="0dp"
                android:layout_marginTop="0dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailBoxLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailBox"
                    style="@style/AppTheme.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail_address"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordBoxLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordBox"
                    style="@style/AppTheme.Text"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/rememberLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/remember_me"
                android:textColor="@color/colorWhite" />

            <android.support.design.button.MaterialButton
                android:id="@+id/signInButton"
                style="@style/AppTheme.Button"
                android:text="@string/sign_in"
                android:onClick="proceed"/>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgetPasswordButton"
                    style="@style/AppTheme.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:onClick="goToForgetPasswordActivity" />

                <TextView
                    android:id="@+id/registerButton"
                    style="@style/AppTheme.Text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="goToRegisterActivity"
                    android:text="@string/register" />
            </android.support.v7.widget.LinearLayoutCompat>
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>