<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        style="@style/AppTheme.Text.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_analytics"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pageViewHighlight"
                    style="@style/AppTheme.Text.CardHighlight"
                    android:text="245" />

                <TextView
                    style="@style/AppTheme.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/page_views"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pageInvitesHighlight"
                    style="@style/AppTheme.Text.CardHighlight"
                    android:text="2522" />

                <TextView
                    style="@style/AppTheme.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invites"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pageReviewsHighlight"
                    style="@style/AppTheme.Text.CardHighlight"
                    android:text="2522" />

                <TextView
                    style="@style/AppTheme.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <TextView
            style="@style/AppTheme.Text.Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="95"
            android:gravity="center_vertical"
            android:text="@string/profile_comments"
            android:textSize="15sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/openCommentButton"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:text="@string/view_all" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:elevation="0dp"
            android:maxHeight="80dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu_black_24dp" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="80dp"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.Text.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="5dp"
                android:text="@string/hide_bottom_view_on_scroll_behavior" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.Text.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/app_name"
                    android:textSize="12sp" />

                <TextView
                    style="@style/AppTheme.Text.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/sample_date_time"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>